--- a/mpc19/paper.tex
+++ b/mpc19/paper.tex
@@ -200,6 +200,27 @@ datatype with a trace combinator, whose construction factors
 through the specification of a uniform iteration operator
 \cite{GoncharovSRJ18,GoncharovMR16}. 
 
+The uniform iteration operator introduces a notion of feedback,
+typically used to model control flow operations such as while
+loops. In the Kleisli category of the delay monad, this operation can
+be intuitively described as follows: We can apply a function
+$f : A \to B + A$ on an input $a$ and either produce an element
+$b : B$, or produce a new element $a' : A$ which can be fed back to
+$f$. This operation can be iterated, and it either terminates
+returning a value in $B$ or it goes on forever without producing any
+output. This form of iteration is ``unguarded'' because it allows the
+possibility of divergence. The trace operator can then be seen as a
+particular form of iteration where, given a function
+$f : A + C \to B + C$, which can be decomposed as
+$\mapL f : A \to B + C$ and $\mapR f : C \to B + C$, we first apply
+$\mapL f$ on an input $a : A$, and, if the latter operation produces a
+value $c : C$, we continue by iterating $\mapR f$ on $c$. Notice that
+the notion of trace can be generally defined in monoidal categories
+where the monoidal structure is not necessarily given by coproducts,
+and it has been used to model other things besides iteration, such as
+partial traces in vector spaces \cite{JoyalSV96}, though this use
+falls outside of the scope of this paper.
+
 Throughout the paper, we reason constructively in Martin-L\"of type
 theory. Classically, the delay monad (quotiented by
 weak bisimilarity)
